miraculously got steps 4 and 5 completed

--- a/Fetch-N-Store/Fetch-N-Store/Fetch-N-Store.csproj
+++ b/Fetch-N-Store/Fetch-N-Store/Fetch-N-Store.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ResponseController.cs" />
     <Compile Include="DAL\ResponseContext.cs" />
     <Compile Include="DAL\ResponseRepo.cs" />
     <Compile Include="Global.asax.cs">
@@ -294,6 +295,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\Responses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
